[gd_scene load_steps=11 format=3 uid="uid://c6wx1xx0xpjud"]

[ext_resource type="PackedScene" uid="uid://poa8qvl8w2k3" path="res://scenes/characters/bases/giant.tscn" id="1_2rct2"]
[ext_resource type="Script" path="res://scripts/characters/boss_giant.gd" id="1_euceu"]
[ext_resource type="AudioStream" uid="uid://g5edwu8xbrdx" path="res://src/sound/sfx/punch-41105.mp3" id="3_sj82n"]
[ext_resource type="Texture2D" uid="uid://m2ih20yn1b45" path="res://src/textures/chara_blue.png" id="4_0fs8o"]
[ext_resource type="AudioStream" uid="uid://dujd7f8hakkv1" path="res://src/sound/sfx/poison_proc.wav" id="4_22ehj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_noo10"]
radius = 1.43052
height = 10.6538

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5jkut"]
radius = 0.579973
height = 10.8897

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hhtw8"]
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3(0, 9.8, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jshod"]
albedo_color = Color(0.675978, 0.459498, 0.881928, 1)

[sub_resource type="SphereMesh" id="SphereMesh_r7j4e"]
material = SubResource("StandardMaterial3D_jshod")
radius = 0.01

[node name="BossGiant" type="CharacterBody3D" groups=["enemies_g"]]
script = ExtResource("1_euceu")

[node name="giant" parent="." instance=ExtResource("1_2rct2")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="LiveBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 7.71388, 0)
shape = SubResource("CapsuleShape3D_noo10")

[node name="DeathHit" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.0359, 0)
shape = SubResource("CapsuleShape3D_5jkut")
disabled = true

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_sj82n")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 13.0

[node name="HitSound2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_sj82n")

[node name="PoisonFX" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.4488, 0)
amount = 256
speed_scale = 0.25
process_material = SubResource("ParticleProcessMaterial_hhtw8")
draw_pass_1 = SubResource("SphereMesh_r7j4e")

[node name="PoisonSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_22ehj")
volume_db = 5.0

[node name="BossHealth" type="TextureProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.25
offset_top = -129.0
offset_right = -479.25
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1000, 50)
max_value = 5000.0
value = 5000.0
texture_progress = ExtResource("4_0fs8o")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 492.0
offset_top = 925.0
offset_right = 548.0
offset_bottom = 948.0
text = "Giant"
metadata/_edit_use_anchors_ = true

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
